--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -1,1 +1,3 @@
 footer.footer
+    p AUNAR Proyectos Educativos. 2017 &reg; Todos los derechos reservados.
+    a(href="/politicas-de-privacidad", target="_blank") Políticas de privacidad
