--- a/src/_modules/footer/footer.scss
+++ b/src/_modules/footer/footer.scss
@@ -1,3 +1,16 @@
 .footer {
-    
+    font-size: 14px;
+    background: $lightGray;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+
+    p {
+        display: inline-block;
+        margin: 0 15px 0 0;
+    }
+
+    @include mq(md){
+        padding-left: 250px;
+    }
 }
