--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -1,2 +1,28 @@
 header.header
     
+    .header__hamburguer
+        span
+        span
+        span
+    
+    .header__logo
+        a(href="/")
+            | <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>  
+        
+    nav.header__nav
+        ul.header__menu
+            each item in site.data.header
+                li
+                    a(href=item.url)= item.name
+                    if item.submenu
+                        ul.header__submenu
+                            each link in item.submenu
+                                li
+                                    a(href=link.url)= link.name
+                                    
+        ul.header__social
+            each red in site.data.social
+                li
+                    a(href=red.url, target="_blank")
+                        i(class="fa fa-#{red.name}")
+                        
