--- a/src/_modules/header/header.scss
+++ b/src/_modules/header/header.scss
@@ -2,17 +2,32 @@
 
     $h: &;
 
+    background: $bgSecondary;
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 100;
+    width: 100%;
+
+    @include mq(md){
+        width: 250px;
+        bottom: 0;
+    }
+
     &__hamburguer {
         cursor: pointer;
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
         margin: auto;
         position: absolute;
         right: 32px;
         top: 30px;
+        z-index: 1;
+        padding: 5px;
+        background: transparentize($mainColor, .3);
 
         span {
-            background-color: $mainColor;
+            background-color: $white;
             border-radius: 2px;
             content: '';
             display: block;
@@ -33,6 +48,94 @@
                 animation-direction:reverse;
             }
         }
+
+        @include mq(md){
+            display: none;
+        }
+    }
+
+    &__logo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 15px;
+        width: 110px;
+        height: 122px;
+        z-index: 1;
+        background: transparentize($mainColor, .3);
+
+        @include mq(md){
+            width: 220px;
+            height: 244px;
+            right: 0;
+            position: relative;
+            margin: auto;
+        }
+
+
+        svg {
+            fill: $white;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__nav {
+        @include trans;
+
+        position: fixed;
+        left:0;
+        right: 0;
+        background: $bgSecondary;
+        color:$white;
+        transform: translateX(-100%);
+        z-index: 0;
+        padding-top: 125px;
+
+        @include mq(md){
+            position: relative;
+            width: 250px;
+            transform: translateX(0);
+            padding-top: 0;
+        }
+    }
+
+    &__menu {
+        border-top: 1px solid $mainColor - #333;
+
+        li {
+            border-bottom: 1px solid $mainColor - #333;
+            width: 100%;
+        }
+
+        a {
+            color:$white;
+            display: block;
+            height: 40px;
+            line-height: 40px;
+            padding: 0 15px;
+        }
+    }
+
+    &__social {
+        display: flex;
+        justify-content: center;
+        padding: 10px 0;
+
+        li {
+            margin: 0 15px;
+        }
+
+        a {
+            width: 32px;
+            height: 32px;
+            line-height: 32px;
+            text-align: center;
+            background-color:$white;
+            color: $mainColor;
+            display: block;
+            border-radius: 50%;
+        }
     }
 
     &.-open {
@@ -49,7 +152,7 @@
         }
 
         #{$h}__nav {
-
+            transform: translateX(0);
         }
     }
 }
